--- a/DOM_base/Task_14/main.css
+++ b/DOM_base/Task_14/main.css
@@ -1,15 +1,23 @@
-.outside {
+.users {
+    width: 50vw;
+    height: 50vh;
     display: flex;
-    justify-content:center;
-    align-items: center;
-    width: 200px;
-    height: 200px;
-    cursor: pointer;
+    justify-content: space-around;
+}
+
+.card {
+    width: 500px;
+    height: 500px;
+    border: 1px solid black;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.card.male {
     background-color: blue;
 }
-.inside {
-    width: 100px;
-    height: 100px;
-    cursor: cell;
-    background-color: yellow; 
+
+.card.female {
+    background-color: pink;
 }
